2010-01-23  Martin Baker <ax87438@martinb.com>

	* src/algebra/clifford.spad.pamphlet: Support Clifford
	algebra corresponding to non-diagonal matrix, add new
	operations.

2010-01-16  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/Makefile.in: stamp_fasls: Avoid compilation
	on second run.

2010-01-13  Martin Rubey  <martin.rubey@math.uni-hannover.de>

	* src/algebra/mantepse.spad.pamphlet: add missing negations in
	preccheck, so checks are skipped only when we want that, move
	documentation out of functions and use consistent spacing

2010-01-12  Martin Rubey  <martin.rubey@univie.ac.at>

	* src/algebra/mantepse.spad.pamphlet: remove redundant remainder
	computations (and some tabs), add a series of transcendentals to
	the testing series in checkInterpolant, test for reject_one_term
	at the right place, add possibility to skip checkInterpolant,
	remove heuristic tests from wrapInterpolant

	* src/input/mantepse.input.pamphlet: add test for termination

2010-01-12  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/lodo.spad.pamphlet:
	LinearOrdinaryDifferentialOperatorsOps(): remove wrong import.

2010-01-11  Martin Rubey  <martin.rubey@math.uni-hannover.de>

	* src/input/isprime.input.pamphlet: more tests from Zhenxiang
	Zhang

	* src/input/isprime.input.pamphlet: convert to unittesting
	facility, add Arnault's attack

2009-01-09  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/unittest.spad.pamphlet: Support expected
	failures.
	src/input/bugs2009.input.pamphlet,
	src/input/bugs2007.input.pamphlet: Adjust.

2010-01-08  Rainer Joswig <joswig@lisp.de>

	* configure.ac, config.lisp, src/scripts/document.in,
	src/interp/nlib.lisp, src/interp/util.lisp,
	src/interp/macros.lisp, src/interp/vmlisp.lisp,
	src/lisp/Makefile.in, src/lisp/fricas-lisp.lisp:
	Support build with Lispworks.

2010-01-08  Rainer Joswig <joswig@lisp.de>

	* src/lisp/fricas-lisp.lisp: save-core-restart(): Use default
	location of Closure CL kernel.
