@@ -1,3 +1,8 @@
+2010-01-25  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
+	* src/interp/patches.lisp: eval(): Suppress compiler
+	warnings.
+
 2010-01-23  Martin Baker <ax87438@martinb.com>
 
 	* src/algebra/clifford.spad.pamphlet: Support Clifford
